--- a/style.css
+++ b/style.css
@@ -1,78 +1,41 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #7cf9e5;
-}
-
-.section {
-    min-height: 100vh;
-    padding-top: 100px;
-}
-
-.container {
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-h1 {
-    font-size: 40px;
-    margin-bottom: 50px;
-    color: rgb(52, 63, 2);
-    text-align: center;
-}
-
-.accordion{
-    max-width: 700px;
-    margin: auto;
-}
-
-.accordion_item {
-    border: 1px solid rgb(255, 0, 85);
-    padding: 20px;
-}
-
-.accordion_title{
+.wrapper {
     display: flex;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
-    padding-bottom: 30px;
-}
-
-.accordion_title h3 {
-    flex: 1;
-    font-size: 25px;
-}
-
-.accordion_title i{
-    font-size: 30px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .wrapper button {
+      padding: 10px 20px;
+      background: #016126;
+      color: #fff;
+      font-weight: bold;
+      font-size: 20px;
+      cursor: pointer;
+  }
+  
+  .accordian {
+    width: 500px;
+  }
+  
+  .item {
+    background: #016154;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+  }
+  
+  .title {
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     cursor: pointer;
-}
-
-.accordion_content{
-    display: none;
-}
-
-.accordion_title.active + .accordion_content {
-    display: block;
-    padding-top: 20px;
-}
-
-.accordion_content p{
-    font-size: 20px;
-    color: rgb(117, 49, 0);
-}
-
-.accordion_title.active i {
-    transform: rotate(180deg);
-}
-
-.accordion_title.active {
-    border-bottom: 2px solid red;
-}
+  }
+  
+  .content {
+    color: #ffffff;
+    height: auto;
+  }
